igt@i915_pm_rps@reset - fail - Test assertion failure function waitboost, Failed assertion: boost_freqs[CUR] == boost_freqs[BOOST]
https://intel-gfx-ci.01.org/tree/drm-tip/IGTPW_12508/shard-dg1-12/igt@i915_pm_rps@reset.html
Err
Starting subtest: reset
(i915_pm_rps:2449) CRITICAL: Test assertion failure function waitboost, file ../tests/intel/i915_pm_rps.c:651:
(i915_pm_rps:2449) CRITICAL: Failed assertion: boost_freqs[CUR] == boost_freqs[BOOST]
(i915_pm_rps:2449) CRITICAL: error: 450 != 1650
Subtest reset failed.