drm/i915/slpc: Avoid negative num_waiters to ensure correct waitboost behavior

In SLPC, the num_waiters atomic variable can become negative if a request
retires without a proper frequency boost. This issue prevents the
frequency boost from being triggered in subsequent boost iterations.
This check stops the counter from going negative to ensures the
correct behavior of the waitboost mechanism.

Closes: https://gitlab.freedesktop.org/drm/i915/kernel/-/issues/13598
Signed-off-by: Sk Anirban <sk.anirban@intel.com>